--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
             <button class = "button header__button">Request Invite</button>
             <img class = "header__hamburger" src="./images/icon-hamburger.svg" alt="icon-navbar">
         </div>
-        <dialog class = "header__fade header__fade--hidden">
-            <div class = "header__modal">
+        <dialog class = "modal modal--hidden">
+            <div class = "modal__content">
                 <a href="#">Home</a>
                 <a href="#">About</a>
                 <a href="#">Contact</a>
@@ -98,7 +98,7 @@
             <div class = "section3__articleContainer">
                 <div class = "article">
                     <img class = "article__img" src="./images/image-currency.jpg" alt="image-currency">
-                    <div>
+                    <div class = "article__textContent">
                         <p class = "article__author">By Claire Robinson</p>
                         <h3 class = "article__title">Receive money in any currency with no fees</h3>
                         <p class = "article__text">The world is getting smaller and we’re becoming more mobile. So why should you be 
@@ -107,7 +107,7 @@
                 </div>
                 <div class = "article">
                     <img class = "article__img" src="./images/image-restaurant.jpg" alt="image-currency">
-                    <div>
+                    <div class = "article__textContent">
                         <p class = "article__author">By Wilson Hutton</p>
                         <h3 class = "article__title">Treat yourself without worrying about money</h3>
                         <p class = "article__text">Our simple budgeting feature allows you to separate out your spending and set 
@@ -116,7 +116,7 @@
                 </div>
                 <div class = "article">
                     <img class = "article__img" src="./images/image-plane.jpg" alt="image-currency">
-                    <div>
+                    <div class = "article__textContent">
                         <p class = "article__author">By Wilson Hutton</p>
                         <h3 class = "article__title">Take your Easybank card wherever you go</h3>
                         <p class = "article__text">We want you to enjoy your travels. This is why we don’t charge any fees on purchases 
@@ -125,7 +125,7 @@
                 </div>
                 <div class = "article">
                     <img class = "article__img" src="./images/image-confetti.jpg" alt="image-currency">
-                    <div>
+                    <div class = "article__textContent">
                         <p class = "article__author">By Claire Robinson</p>
                         <h3 class = "article__title">Our invite-only Beta accounts are now live!</h3>
                         <p class = "article__text">After a lot of hard work by the whole team, we’re excited to launch our closed beta. 
